--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     />
     
     <title>JacketEx store</title>
+    <script
+      src="https://kit.fontawesome.com/0e889649eb.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
