feat added landing Page without node-modules

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="JacketEx store react website"
     />
+    <script
+      src="https://kit.fontawesome.com/0e889649eb.js"
+      crossorigin="anonymous"
+    ></script>
     
     <title>JacketEx store</title>
   </head>
